[tool.poetry]
name = "Heksher"
version = "0.5.4"
description = "Heksker"
authors = ["Biocatch LTD <serverteam@biocatch.com>"]

[tool.poetry.dependencies]
python = "~3.11"

fastapi = "^0.92.0"
orjson = "^3.4.0"
pydantic = "^1.7.0"
uvicorn = {version="^0.20.0", extras=["standard"]}
envolved = "^0.5.0"

SQLAlchemy = "^2"
asyncpg = "^0.27.0"
sentry-sdk = "^1.1.0"

alembic = "^1.4.3"
psycopg2 = "^2.9.2"
aiologstash2 = "^2.0.1"

[tool.poetry.dev-dependencies]
async-asgi-testclient = "^1.4.6"
httpx = "*"
pytest-cov = "*"
flake8 = "*"
requests = "^2.25.1"
yellowbox = {extras = ["postgresql"], version = "^0.8.0"}
mypy = "*"
types-orjson = "*"
isort = "*"
Sphinx = "^4.3.1"
sphinx-rtd-theme = "^1.0.0"
pytest-asyncio = "*"
pytest = "*"
